[workspace]

members = [
  "tower",
  "tower-balance",
  "tower-buffer",
  "tower-discover",
  "tower-filter",
  "tower-hedge",
  "tower-layer",
  "tower-limit",
  "tower-load",
  "tower-load-shed",
  "tower-pool",
  "tower-reconnect",
  "tower-retry",
  "tower-service",
  "tower-spawn-ready",
  "tower-test",
  "tower-timeout",
  "tower-util",
]
