[package]
name = "tower-pool"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.1.0"
authors = ["Tower Maintainers <team@tower-rs.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tower-rs/tower"
homepage = "https://github.com/tower-rs/tower"
documentation = "https://docs.rs/tower-pool/0.1.0"
description = """
A load-informed service-pooling layer.
"""
categories = ["asynchronous", "network-programming"]
edition = "2018"
publish = false

[dependencies]
futures = "0.1.26"
indexmap = "1.0.2"
log = "0.4.1"
rand = "0.6.5"
tokio-timer = "0.2.4"
tower-discover = "0.1.0"
tower-load = { version = "0.1.0", path = "../tower-load" }
tower-service = "0.2.0"
tower-util = "0.1.0"

[dev-dependencies]
log = "0.4.1"
env_logger = { version = "0.5.3", default-features = false }
hdrsample = "6.0"
quickcheck = { version = "0.6", default-features = false }
tokio = "0.1.7"
tokio-executor = "0.1.2"
tower = { version = "0.1", path = "../tower" }
tower-buffer = { version = "0.1", path = "../tower-buffer" }
tower-limit = { version = "0.1", path = "../tower-limit" }
tower-test = { version = "0.1.0", path = "../tower-test" }
